# dotfiles

./: .envrc  .gitignore  README.md
.github/: dependabot.yml
ai-tools/: secrets.env.example
kitty/: ssh.conf
nixos-config/: .sops.yaml  flake.nix  result
nvim/: lazy-lock.json
scripts/: .env.example  README.md  aw_analytics_export.py  aw_common.py  aw_notion_sync.py  notion_cat.py  push_aw.py  (+10 more)
scripts/personal_telegram_bot/: README.md  pyproject.toml
scripts/personal_telegram_bot/personal_telegram_bot/: __init__.py  bot.py  cli.py  config.py  db.py  digests.py  formatters.py  ingest_server.py  life_events.py  t3_pairing.py  telegram_api.py
scripts/personal_telegram_bot/personal_telegram_bot/providers/: aw_hours.py  github_activity.py  health.py  location.py  notion_evidence.py  notion_todos.py  paper_inbox.py  phone_usage.py  sleep.py  time_accounting.py
scripts/personal_telegram_bot/personal_telegram_bot/tpot/: __init__.py  client.py  collection.py  evidence.py  job.py  seeds.py  synthesizer.py  topics.py
scripts/personal_telegram_bot/tests/: test_authorization.py  test_aw_hours.py  test_db.py  test_digests.py  test_failure_dedupe.py  test_formatters.py  test_github_activity.py  test_health.py  test_ingest_server.py  test_life_events.py  test_location.py  test_notion_todos.py  test_papers.py  test_phone_usage.py  test_sleep_provider.py  test_sleep_summary_cli.py  test_standdown.py  test_t3_pairing.py  test_tpot_client.py  test_tpot_digests.py  test_tpot_evidence.py  test_tpot_seed_job.py  test_tpot_seeds.py  test_tpot_synthesizer.py  test_tpot_topics.py
(+78 files in other folders)
