[project]
name = "personal-telegram-bot"
version = "0.1.0"
description = "sleeper-service personal Telegram bot: Notion digests, service health alerts"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.0",
    "notion-client>=2.2.1",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.scripts]
botctl = "personal_telegram_bot.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["personal_telegram_bot"]
